Pārveidots teksts lapās ar paraugtekstu

--- a/inventars.html
+++ b/inventars.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sākumlapa</title>
+    <title>Inventāra ceļvedis</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -44,6 +44,7 @@
         }
 
         h1,
+        h2,
         p {
             color: #333;
         }
@@ -52,28 +53,42 @@
             text-align: center;
             margin-bottom: 20px;
         }
+
+        h2 {
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            line-height: 1.6;
+        }
     </style>
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Sākumlapa</a></li>
+            <li><a href="index.html">Sākums</a></li>
             <li><a href="./pamaciba.html">Apgūšana/pamācība</a></li>
             <li><a href="./inventars.html">Inventāra ceļvedis</a></li>
             <li><a href="./karte.html">Slēpošanas karte</a></li>
-            
         </ul>
     </nav>
     <div class="content">
-      <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRz_CnAQLzPQZesTZW_6WM2nW4Wsgo6coU_g&usqp=CAU">
+        <h1>Inventāra ceļvedis</h1>
         <p>
-            Šeit jāievieto teksts par mājas lapas funkcijām.
+            Jāievieto saraksts sāna ar inventāra veidiem kas aizved uz atsevišķām lapām kur tiek paskaidrots (vārbūt izveidots inventāra
+            kalkulators kas palidz) par katru veidu un bildes ar izskatu
         </p>
+        <h2>PARAUGTEKSTS </h2>
         <p>
-            Šeit jāievito teksts par slēpošanas vēsturi un pamatinformāciju
+            PARAUGTEKSTS 
         </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/OWCkPbzq81g?si=ono_WC_MigjAXdLr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>PARAUGTEKSTS </h2>
+        <p>
+            PARAUGTEKSTS 
+        </p>
+      <
     </div>
 </body>
 
