--- a/pamaciba.html
+++ b/pamaciba.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sākumlapa</title>
+    <title>Slepošanas pamācība</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -44,13 +44,9 @@
         }
 
         h1,
+        h2,
         p {
             color: #333;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -58,7 +54,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Sākumlapa</a></li>
+            <li><a href="index.html">Sākums</a></li>
             <li><a href="./pamaciba.html">Apgūšana/pamācība</a></li>
             <li><a href="./inventars.html">Inventāra ceļvedis</a></li>
             <li><a href="./karte.html">Slēpošanas karte</a></li>
@@ -66,14 +62,19 @@
         </ul>
     </nav>
     <div class="content">
-      <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRz_CnAQLzPQZesTZW_6WM2nW4Wsgo6coU_g&usqp=CAU">
+        <h1>Slēpošanas pamatprinci un pamācība</h1>
+        <h2>PARAUGTEKSTS </h2>
         <p>
-            Šeit jāievieto teksts par mājas lapas funkcijām.
+            PARAUGTEKSTS 
         </p>
+        <h2>PARAUGTEKSTS </h2>
         <p>
-            Šeit jāievito teksts par slēpošanas vēsturi un pamatinformāciju
+            PARAUGTEKSTS 
         </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/OWCkPbzq81g?si=ono_WC_MigjAXdLr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>PARAUGTEKSTS </h2>
+        <p>
+            PARAUGTEKSTS 
+        </p>
     </div>
 </body>
 
